--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Listing products</h1>
+<h1>Here's some Ipsum!</h1>
 
 <table>
-  <tr><th></th><th>Ipsum</th><th>Price</th><th>Edit</th></tr>
+  <tr><th></th><th>Ipsum</th><th>Price</th></tr>
 <% @products.each do |product| %>
   <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
 
@@ -11,7 +11,7 @@
 
     <td class="list_description">
       <dl>
-        <dt><%= product.title %></dt>
+        <dt><%= link_to product.title, product %></dt>
         <dd><%= truncate(strip_tags(product.description),
                length: 400) %></dd>
       </dl>
@@ -22,7 +22,6 @@
     </td>
 
     <td class="list_actions">
-      <%= link_to 'Show', product %><br/>
       <%= link_to 'Edit', edit_product_path(product) %><br/>
       <%= link_to 'Destroy', product, method: :delete,
                   data: { confirm: 'Are you sure?' } %>
